# ariane

./: CMakeLists.txt  LICENSE  README.md
include/ariane/: ariane.hpp
src/: CMakeLists.txt  ariane.cpp  offline_play.cpp
test/: CMakeLists.txt  test_ariane.cpp
